Create pug mixin for form input and textarea. Create extend scss file.

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -7,3 +7,37 @@ extends shared/_layout
 
 block content
   div.body(class!= contentClassName)
+
+    form.c-form
+      //.c-form__group.c-form__group--two
+      //  .c-form__group-col.c-form__group-col-0
+      //    +formInput(dataFormObj.inputName)
+      //  .c-form__group-col.c-form__group-col-1
+      //    +formInput(dataFormObj.inputName)
+      //
+      //.c-form__group.c-form__group--three
+      //  .c-form__group-col.c-form__group-col-0
+      //    +formInput(dataFormObj.inputName)
+      //  .c-form__group-col.c-form__group-col-1
+      //    +formInput(dataFormObj.inputName)
+      //  .c-form__group-col.c-form__group-col-2
+      //    +formInput(dataFormObj.inputName)
+      //
+      //.c-form__group.c-form__group--two
+      //  .c-form__group-col.c-form__group-col-0
+      //    +formInput(dataFormObj.inputName)
+      //  .c-form__group-col.c-form__group-col-1
+      //    +formTextarea(dataFormObj.textareaField)
+      //
+      //.c-form__group.c-form__group--three
+      //  .c-form__group-col.c-form__group-col-0
+      //    +formInput(dataFormObj.inputName)
+      //  .c-form__group-col.c-form__group-col-1
+      //    +formInput(dataFormObj.inputName)
+      //  .c-form__group-col.c-form__group-col-2
+      //    +formTextarea(dataFormObj.textareaField)
+
+      +formInput(dataFormObj.inputName)
+      //+formInput(dataFormObj.inputEmail)
+      //+formInput(dataFormObj.inputPassword)
+      +formTextarea(dataFormObj.textareaField, dataFormObj.notifyTextareaMessage)
