--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -9,7 +9,7 @@
 /// VENDOR
 /// ===============
 //@import "_vendor/hamburger/_hamburgers";
-//@import "_vendor/selectric/_selectric";
+@import "_vendor/selectric/_selectric";
 ///
 /// GENERATED
 /// ===============
