--- a/src/pug/utilities/_dataForm.pug
+++ b/src/pug/utilities/_dataForm.pug
@@ -2,47 +2,93 @@
 
 -
   var dataFormObj = {
-    inputName: {
-      classMod: "",
-      uniqName: "login_name",
-      labelVal: "Name",
-      inputType: "",
-      inputClassMod: "",
-      placeholderVal: "Type your name",
-      val: ""
-    },
-    inputEmail: {
-      classMod: "",
-      uniqName: "login_email",
-      labelVal: "Email",
-      inputType: "",
-      inputClassMod: "",
-      placeholderVal: "Type your email",
-      val: ""
-    },
-    inputPassword: {
-      classMod: "",
-      uniqName: "login_password",
-      labelVal: "Password",
-      inputType: "password",
-      inputClassMod: "",
-      placeholderVal: "Type your password",
-      val: ""
-    },
+  inputName: {
+    classMod: "",
+    uniqueName: "login_name",
+    labelVal: "Name",
+    inputType: "",
+    inputClassMod: "",
+    placeholderVal: "Type your name",
+    val: ""
+  },
+  inputEmail: {
+    classMod: "",
+    uniqueName: "login_email",
+    labelVal: "Email",
+    inputType: "",
+    inputClassMod: "",
+    placeholderVal: "Type your email",
+    val: ""
+  },
+  inputPassword: {
+    classMod: "",
+    uniqueName: "login_password",
+    labelVal: "Password",
+    inputType: "password",
+    inputClassMod: "",
+    placeholderVal: "Type your password",
+    val: ""
+  },
 
-    textareaField: {
-      classMod: "",
-      uniqName: "login_message",
-      labelVal: "Message",
-      textareaClassMod: "",
-      placeholderVal: "Type your message",
-      val: ""
-    },
+  radioFieldCustom1: {
+    classMod: "",
+    labelVal: "Radio label name",
+    uniqueName: "login_radio-1",
+    radioChecked: "checked",
+    radioGroupName: "login",
+    radioClassMod: "",
+    radioContent: "Some radio content"
+  },
 
-    notifyNameMessage : [],
-    notifyEmailMessage : [],
-    notifyPasswordMessage : [],
-    notifyTextareaMessage : ['Error message']
+  radioFieldCustom2: {
+    classMod: "",
+    labelVal: "Radio label name",
+    uniqueName: "login_radio-2",
+    radioChecked: "",
+    radioGroupName: "login",
+    radioClassMod: "",
+    radioContent: "Some radio content"
+  },
+
+  textareaField: {
+    classMod: "",
+    uniqueName: "login_message",
+    labelVal: "Message",
+    textareaClassMod: "",
+    placeholderVal: "Type your message",
+    val: ""
+  },
+
+  selectFieldCustom: {
+    classMod: "",
+    uniqueName: "login_select",
+    labelVal: "Select custom",
+    selectClassMod: "",
+    selectOption: [
+      'Some option 1',
+      'Some option 2',
+      'Some option 3'
+    ],
+    placeholderVal: "Choose your..."
+  },
+  selectFieldSelectric: {
+    classMod: "",
+    uniqueName: "login_selectric",
+    labelVal: "Select selectric",
+    selectClassMod: "",
+    selectOption: [
+      'Some option 1',
+      'Some option 2',
+      'Some option 3'
+    ],
+    placeholderVal: "Choose your..."
+  },
+
+  notifyNameMessage : [],
+  notifyEmailMessage : [],
+  notifyPasswordMessage : [],
+  notifyTextareaMessage : [],
+  notifySelectMessage : ['Error message']
   };
 
 //- DATA FORM :: END
