Create radio, checkbox form items.

--- a/src/pug/utilities/_dataForm.pug
+++ b/src/pug/utilities/_dataForm.pug
@@ -30,7 +30,7 @@
     val: ""
   },
 
-  radioFieldCustom1: {
+  radioField: {
     classMod: "",
     labelVal: "Radio label name",
     uniqueName: "login_radio-1",
@@ -40,14 +40,13 @@
     radioContent: "Some radio content"
   },
 
-  radioFieldCustom2: {
+  checkboxField: {
     classMod: "",
-    labelVal: "Radio label name",
-    uniqueName: "login_radio-2",
-    radioChecked: "",
-    radioGroupName: "login",
-    radioClassMod: "",
-    radioContent: "Some radio content"
+    labelVal: "Checkbox label name",
+    uniqueName: "login_checkbox1",
+    checkboxChecked: "",
+    checkboxClassMod: "",
+    checkboxContent: "Some checkbox content"
   },
 
   textareaField: {
@@ -88,7 +87,9 @@
   notifyEmailMessage : [],
   notifyPasswordMessage : [],
   notifyTextareaMessage : [],
-  notifySelectMessage : ['Error message']
+  notifySelectMessage : [],
+  notifyRadioMessage : [],
+  notifyCheckboxMessage : []
   };
 
 //- DATA FORM :: END
