--- a/src/scss/_macros/_form.scss
+++ b/src/scss/_macros/_form.scss
@@ -12,6 +12,7 @@ $form-field-group-three-margin: $form-field-group-two-margin + 5px;
 $form-field-margin: 20px;
 $form-field-input-height: 50px;
 $form-field-radio-height: $form-field-input-height;
+$form-field-checkbox-height: $form-field-input-height;
 $form-field-select-height: $form-field-input-height;
 $form-field-textarea-height: 150px;
 
@@ -43,6 +44,20 @@ $form-radio-icon-inner-width: $form-radio-icon-width / 2;
 $form-radio-icon-inner-height: $form-radio-icon-height / 2;
 $form-radio-icon-inner-border-radius: 100%;
 $form-radio-icon-inner-background-color: rgba(#000, 1);
+
+// checkbox
+$form-checkbox-icon-wrapper-width: 30px;
+$form-checkbox-icon-width: 25px;
+$form-checkbox-icon-height: $form-checkbox-icon-width;
+$form-checkbox-icon-border-radius: 5px;
+$form-checkbox-icon-border-width: 1px;
+$form-checkbox-icon-border-color-inactive: rgba(#000, 0.5);
+$form-checkbox-icon-border-color-active: rgba(#000, 1);
+$form-checkbox-font-size: 16px;
+$form-checkbox-icon-inner-width: 6px;
+$form-checkbox-icon-inner-height: $form-checkbox-icon-inner-width * 2;
+$form-checkbox-icon-inner-border-color: rgba(#000, 1);
+$form-checkbox-icon-inner-border-width: 1px;
 
 // select
 $form-select-border-radius: 5px;
@@ -128,13 +143,44 @@ $form-notify-font-weight: bold;
         color: $c-danger;
       }
       .c-form__input,
-      .c-form__select-wrapper,
-      .c-form__select-wrapper .c-form__select-value,
-      .c-form__select-wrapper .c-form__select-icon i,
       .c-form__textarea {
         border-color: $c-danger;
         color: $c-danger;
         @include inputPlaceholder {
+          color: $c-danger;
+        }
+      }
+      .c-form__select-wrapper,
+      .c-form__select-wrapper .c-form__select-value,
+      .c-form__select-wrapper .c-form__select-icon i {
+        border-color: $c-danger;
+        color: $c-danger;
+      }
+      .c-form__radio {
+        &-icon {
+          i {
+            border-color: $c-danger;
+
+            &:before {
+              background-color: $c-danger;
+            }
+          }
+        }
+        &-text {
+          color: $c-danger;
+        }
+      }
+      .c-form__checkbox {
+        &-icon {
+          i {
+            border-color: $c-danger;
+
+            &:before {
+              border-color: $c-danger;
+            }
+          }
+        }
+        &-text {
           color: $c-danger;
         }
       }
@@ -149,13 +195,44 @@ $form-notify-font-weight: bold;
         color: $c-warning;
       }
       .c-form__input,
-      .c-form__select-wrapper,
-      .c-form__select-wrapper .c-form__select-value,
-      .c-form__select-wrapper .c-form__select-icon i,
       .c-form__textarea {
         border-color: $c-warning;
         color: $c-warning;
         @include inputPlaceholder {
+          color: $c-warning;
+        }
+      }
+      .c-form__select-wrapper,
+      .c-form__select-wrapper .c-form__select-value,
+      .c-form__select-wrapper .c-form__select-icon i {
+        border-color: $c-warning;
+        color: $c-warning;
+      }
+      .c-form__radio {
+        &-icon {
+          i {
+            border-color: $c-warning;
+
+            &:before {
+              background-color: $c-warning;
+            }
+          }
+        }
+        &-text {
+          color: $c-warning;
+        }
+      }
+      .c-form__checkbox {
+        &-icon {
+          i {
+            border-color: $c-warning;
+
+            &:before {
+              border-color: $c-warning;
+            }
+          }
+        }
+        &-text {
           color: $c-warning;
         }
       }
@@ -170,13 +247,44 @@ $form-notify-font-weight: bold;
         color: $c-info;
       }
       .c-form__input,
-      .c-form__select-wrapper,
-      .c-form__select-wrapper .c-form__select-value,
-      .c-form__select-wrapper .c-form__select-icon i,
       .c-form__textarea {
         border-color: $c-info;
         color: $c-info;
         @include inputPlaceholder {
+          color: $c-info;
+        }
+      }
+      .c-form__select-wrapper,
+      .c-form__select-wrapper .c-form__select-value,
+      .c-form__select-wrapper .c-form__select-icon i {
+        border-color: $c-info;
+        color: $c-info;
+      }
+      .c-form__radio {
+        &-icon {
+          i {
+            border-color: $c-info;
+
+            &:before {
+              background-color: $c-info;
+            }
+          }
+        }
+        &-text {
+          color: $c-info;
+        }
+      }
+      .c-form__checkbox {
+        &-icon {
+          i {
+            border-color: $c-info;
+
+            &:before {
+              border-color: $c-info;
+            }
+          }
+        }
+        &-text {
           color: $c-info;
         }
       }
@@ -193,13 +301,12 @@ $form-notify-font-weight: bold;
 
     &--textarea {}
 
+    &--checkbox,
     &--radio {
       .c-form__label {
         cursor: default;
       }
     }
-
-    &--checkbox {}
   }
 
   &__label {
@@ -328,7 +435,8 @@ $form-notify-font-weight: bold;
     }
   }
 
-  &__radio {
+  &__radio,
+  &__checkbox {
     display: none;
     position: absolute;
     width: 0.1px;
@@ -337,27 +445,9 @@ $form-notify-font-weight: bold;
     top: 0;
     left: 0;
 
-    &:checked {
-      &+label {
-        .c-form__radio-icon {
-          i {
-            border-color: $form-radio-icon-border-color-active;
-            @include transition(border-color);
-
-            &:before {
-              transform: translate(-50%, -50%) scale(1);
-              background-color: $form-radio-icon-inner-background-color;
-              @include transition(transform, background-color);
-            }
-          }
-        }
-      }
-    }
-
     &-wrapper {
       position: relative;
       display: flex;
-      height: $form-field-radio-height;
     }
 
     &-content {
@@ -367,11 +457,40 @@ $form-notify-font-weight: bold;
     }
 
     &-icon {
+      i {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+  }
+
+  &__radio {
+    &:checked {
+      &+label {
+        .c-form__radio-icon {
+          i {
+            border-color: $form-radio-icon-border-color-active;
+            @include transition(border-color);
+
+            &:before {
+              transform: scale(1);
+              background-color: $form-radio-icon-inner-background-color;
+              @include transition(transform, background-color);
+            }
+          }
+        }
+      }
+    }
+
+    &-wrapper {
+      height: $form-field-radio-height;
+    }
+
+    &-icon {
       width: $form-radio-icon-wrapper-width;
 
       i {
-        position: relative;
-        display: flex;
         width: $form-radio-icon-width;
         height: $form-radio-icon-height;
         border-radius: $form-radio-icon-border-radius;
@@ -380,14 +499,11 @@ $form-notify-font-weight: bold;
 
         &:before {
           content: '';
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%) scale(0);
           width: $form-radio-icon-inner-width;
           height: $form-radio-icon-inner-height;
           border-radius: $form-radio-icon-inner-border-radius;
           background-color: transparent;
+          transform: scale(0);
           @include transition(transform, background-color);
         }
       }
@@ -399,7 +515,57 @@ $form-notify-font-weight: bold;
     }
   }
 
-  &__checkbox {}
+  &__checkbox {
+    &:checked {
+      &+label {
+        .c-form__checkbox-icon {
+          i {
+            border-color: $form-radio-icon-border-color-active;
+            @include transition(border-color);
+
+            &:before {
+              opacity: 1;
+              @include transition(opacity);
+            }
+          }
+        }
+      }
+    }
+
+    &-wrapper {
+      height: $form-field-checkbox-height;
+    }
+
+    &-icon {
+      width: $form-checkbox-icon-wrapper-width;
+
+      i {
+        width: $form-checkbox-icon-width;
+        height: $form-checkbox-icon-height;
+        border-radius: $form-checkbox-icon-border-radius;
+        border: $form-checkbox-icon-border-width solid $form-checkbox-icon-border-color-inactive;
+        @include transition(border-color);
+
+        &:before {
+          content: '';
+          opacity: 0;
+          position: relative;
+          top: -1px;
+          transform: rotate(45deg);
+          width: $form-checkbox-icon-inner-width;
+          height: $form-checkbox-icon-inner-height;
+          border: solid $form-checkbox-icon-inner-border-color;
+          border-width: 0 $form-checkbox-icon-inner-border-width $form-checkbox-icon-inner-border-width 0;
+          @include transition(opacity);
+        }
+      }
+    }
+
+    &-text {
+      max-width: calc(100% - #{$form-checkbox-icon-wrapper-width});
+      font-size: $form-checkbox-font-size;
+    }
+  }
 
   &__notify {
     display: none;
