Add style for custom button UI.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -9,7 +9,7 @@
 /// VENDOR
 /// ===============
 //@import "_vendor/hamburger/_hamburgers";
-@import "_vendor/selectric/_selectric";
+//@import "_vendor/selectric/_selectric";
 ///
 /// GENERATED
 /// ===============
@@ -36,7 +36,7 @@
 //@import "_macros/logotype";
 //@import "_macros/nav";
 //@import "_macros/title";
-//@import "_macros/btn";
+@import "_macros/btn";
 //@import "_macros/modal";
 @import "_macros/form";
 ///
