--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -36,9 +36,9 @@
 //@import "_macros/logotype";
 //@import "_macros/nav";
 //@import "_macros/title";
-@import "_macros/btn";
+//@import "_macros/btn";
 //@import "_macros/modal";
-@import "_macros/form";
+//@import "_macros/form";
 ///
 /// COMPONENTS
 /// ===============
