Fix deploy production task.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -20,8 +20,8 @@
 /// SHARED
 /// ===============
 //@import "_shared/fonts";
+@import "_shared/main-custom-reset";
 @import "_shared/grid";
-@import "_shared/main-reset";
 @import "_shared/common";
 //@import "_shared/viewPortChecker";
 //@import "_shared/magnificPopup";
